--- a/dendron.yml
+++ b/dendron.yml
@@ -64,7 +64,7 @@ workspace:
     enableEditorDecorations: true
     maxPreviewsCached: 10
     maxNoteLength: 204800
-    dendronVersion: 0.83.0
+    dendronVersion: 0.86.1
 preview:
     enableFMTitle: true
     enableNoteTitleForLink: true
@@ -72,6 +72,8 @@ preview:
     enablePrettyRefs: true
     enableKatex: true
     automaticallyShowPreview: false
+    enableFrontmatterTags: true
+    enableHashesForFMTags: false
 publishing:
     enableFMTitle: true
     enableNoteTitleForLink: true
