--- a/dendron.yml
+++ b/dendron.yml
@@ -104,4 +104,4 @@ publishing:
         editViewMode: tree
     enablePrettyLinks: true
     assetsPrefix: /my-personal-knowledge-cache
-    siteUrl: https://Ankbzpx.github.io
+    siteUrl: https://ankbzpx.github.io
